--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "prettier": "^2.3.0",
     "typedoc": "^0.20.36",
     "typedoc-plugin-markdown": "^3.8.1",
+    "typescript": "^4.2.4",
     "webpack": "^5.37.1",
     "webpack-cli": "^4.7.0"
   },
