--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "workflow",
     "k6"
   ],
+  "main": "./lib/index.js",
+  "exports": {
+    ".": "./lib/index.js"
+  },
   "homepage": "https://github.com/szkiba/kahwah",
   "license": "MIT",
   "repository": {
@@ -27,9 +31,7 @@
     "@babel/core": "^7.14.3",
     "@babel/preset-env": "^7.14.2",
     "babel-loader": "^8.2.2",
-    "clean-webpack-plugin": "^4.0.0-alpha.0",
     "context": "^1.1.3",
-    "copy-webpack-plugin": "^8.1.1",
     "core-js": "^3.12.1",
     "eslint": "^7.26.0",
     "eslint-config-prettier": "^8.3.0",
