--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "es2015",
     "module": "commonjs",
-    "rootDir": "src",
+    "rootDir": "lib",
     "strict": true
   },
   "exclude": ["node_modules"]
