--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Test runner for k6, inspired by Mocha",
   "keywords": [
     "workflow",
-    "k6"
+    "k6",
+    "mocha",
+    "chai"
   ],
   "main": "./lib/index.js",
   "exports": {
@@ -25,16 +27,19 @@
     "lint": "eslint .",
     "docs": "typedoc",
     "test": "find test -name '*js' | xargs -n 1 k6 run --no-usage-report",
-    "samples": "find samples -name '*js' | xargs -n 1 k6 run --no-usage-report"
+    "samples": "find samples -name '*js' | xargs -n 1 k6 run --no-usage-report",
+    "example": "cat README.md | codedown js | tee example.js | sed -e \"s;https:.*/kahwah[^/^\\\"]*;../lib/index.js;g\" > samples/readme-example.js && k6 run --no-usage-report example.js"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
     "@babel/preset-env": "^7.14.2",
     "babel-loader": "^8.2.2",
+    "codedown": "^2.1.6",
     "context": "^1.1.3",
     "core-js": "^3.12.1",
     "eslint": "^7.26.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-markdown": "^2.1.0",
     "eslint-plugin-prettier": "^3.4.0",
     "k6": "0.0.0",
     "prettier": "^2.3.0",
